s3/overlays/s3-ingressroute.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: s3
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - web
    # - websecure
  routes:
    - match: Host(`${S3_FQDN}`)
      kind: Rule
      middlewares:
        - name: custom-error-middleware
          namespace: traefik-int
      services:
        - name: s3
          port: 9001
  # tls:
  #   secretName: ${SECRET_NAME} #cert-dev
  #   domains:
  #     - main: ${BASE_DOMAIN}
  #       sans:
  #         - "*.preview.${BASE_DOMAIN}"
  #         - "*.testing.${BASE_DOMAIN}"
